# sncf-pipeline

./: .gitignore  pyproject.toml  readme.md
dagster_pipeline/: config.py  definitions.py  resources.py  schedules.py
dagster_pipeline/assets/: ingestion.py  utils.py
dashboard/: dashboard_app.py
dbt_scnf/: dbt_project.yml  dev.duckdb  profiles.yml
dbt_scnf/models/marts/: mart_disruptions_by_serverity.sql  marts_latest_disruptions.sql  marts_status_transitions.sql
dbt_scnf/models/staging/: schema.yml  sources.yml  stg_sncf_disruptions.sql
