[project]
name = "sncf-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.2",
    "dagster-webserver>=1.13.2",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]


[tool.dagster]
module_name = "dagster_pipeline"
