[project]
name = "sncf-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.2",
    "dagster-dbt>=0.29.2",
    "dagster-webserver>=1.13.2",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]


[tool.dagster]
module_name = "dagster_pipeline"
